created a positioning example page

--- a/learn_layout/index.html
+++ b/learn_layout/index.html
@@ -4,11 +4,12 @@
   <title>Learn CSS Layout</title>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <h1>Learn CSS Layout Practice</h1>
+<p> Practicing some CSS from the <a href="www.learnlayout.com">Learn Layout</a> site.</p>
 
 <div class="paragraph-block">
   <p>This div is the standard block-level element. A block-level element starts on a new line and stretches out to the left and right as far as it can. Other common block-level elements are p and form, and new in HTML5 are header, footer, section, and more.</p>
@@ -77,12 +78,7 @@ This element is <b>relatively-positioned</b>. If this element was <b>position: s
   </div>
 </div>
 
-
-
-
-
-
-
+<a href="pages/page2.html">Click here for a realistic example of positioning</a>
 
 
 </body>
