--- a/learn_layout/index.html
+++ b/learn_layout/index.html
@@ -208,6 +208,27 @@ I don't need to use <b>clear</b> for this box.
 <br>
 <a href="pages/page4.html">Click here for in-line block layout example"</a>
 
+<hr>
+
+<!-- COLUMNS -->
+<h2>COLUMNS</h2>
+
+<p>New set of CSS properties that let you easily make a multi-column text:</p>
+
+<div class="three-column">
+<span class="label">".three-column"</span>
+<p>You can set multiple columns using <b>column-count: 3</b> and <b>column-gap: 1em</b>. Column gaps are very new, so may need to use prefixes or they won't work.</p>
+<br>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+<!-- FLEXBOX -->
+<h2>FLEXBOX</h2>
 
 
 </body>
