moved folder, adding sections

--- a/ga_practice/wk01/blog-lab/index.html
+++ b/ga_practice/wk01/blog-lab/index.html
@@ -8,8 +8,28 @@
 <body>
 
   <header>
-    <img id="logo" src="css/images/logo.png">
+    <img id="logo" src="images/logo.png">
   </header>
+
+  <main>
+
+    <section>
+
+      <article>
+      </article>
+
+      <article>
+      </article>
+
+    </section>
+
+    <nav>
+    </nav>
+
+  </main>
+
+  <footer>
+  </footer>
 
 </body>
 </html>
