finished blog lab

--- a/ga_practice/wk01/blog-lab/index.html
+++ b/ga_practice/wk01/blog-lab/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ecard Blog</title>
-  <link href="css/style.csss" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,19 +16,57 @@
     <section>
 
       <article>
+        <h2>Ecard of the Day</h2>
+        <img class="ecards" src="images/ecard-nycstartups.jpg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis id elit sit amet suscipit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla in laoreet libero. Phasellus ultrices faucibus tellus, nec efficitur nibh. Ut nec tempus nunc. Mauris in quam a nisi pulvinar feugiat eu et est. Nam sed felis non leo mattis convallis quis venenatis tortor. <a href="">DOWNLOAD</a></p>
+
+        <hr>
+        <p>Posted by <a href="">Steve Smith</a> on August 2, 2012 / Comments(<a href="">3</a>)</p>
       </article>
 
       <article>
+        <h2>Doing The Big Work</h2>
+        <img class="ecards" src="images/ecard-courage.jpg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque venenatis id elit sit amet suscipit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla in laoreet libero. Phasellus ultrices faucibus tellus, nec efficitur nibh. Ut nec tempus nunc. Mauris in quam a nisi pulvinar feugiat eu et est. Nam sed felis non leo mattis convallis quis venenatis tortor. <a href="">DOWNLOAD</a></p>
+
+        <hr>
+
+        <p>Posted by <a href="">Steve Smith</a> on August 2, 2012 / Comments(<a href="">3</a>)</p>
       </article>
 
     </section>
 
     <nav>
+      <ul>
+        <lh>ARCHIVE</lh>
+        <li>January</li>
+        <li>February</li>
+        <li>March</li>
+        <li>April</li>
+        <li>May</li>
+        <li>June</li>
+        <li>July</li>
+      </ul>
+
+      <ul>
+        <lh>BLOGROLL</lh>
+        <li>Mailchimp</li>
+        <li>Shopify</li>
+        <li>The Next Web</li>
+        <li>Mashable</li>
+      </ul>
+
+      <img class="ads" src="images/ad-cut-and-paste.gif">
+      <img class="ads" src="images/ad-postcard-tee.png">
+      <img class="ads" src="images/ad-submit-your-own.png">
     </nav>
 
   </main>
 
   <footer>
+    <img class="icons" src="images/social-icon-twitter.png">
+    <img class="icons" src="images/social-icon-facebook.png">
+    <img class="icons" src="images/social-icon-pinterest.png">
   </footer>
 
 </body>
