fixed css link and added nav

--- a/ga_practice/wk01/busy-hands/index.html
+++ b/ga_practice/wk01/busy-hands/index.html
@@ -1,8 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Services</li>
+        <li>Blog</li>
+        <li>Contact Us</li>
+      </ul>
+    </nav>
   </body>
 </html>
