--- a/ga_practice/wk01/busy-hands/index.html
+++ b/ga_practice/wk01/busy-hands/index.html
@@ -1,18 +1,58 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <title>Busy Hands</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Services</li>
-        <li>Blog</li>
-        <li>Contact Us</li>
-      </ul>
-    </nav>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
+    </header>
+
+
+    <footer>
+      <div id="footer-widgets">
+        <div class="footer-box">
+          <h2>Blogroll</h2>
+          <ul>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Plugins</a></li>
+            <li><a href="#">Suggest Ideas</a></li>
+            <li><a href="#">Themes</a></li>
+            <li><a href="#">WordPress Blog</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-box middle-widget">
+          <h2>Text Widget</h2>
+          <p>Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+
+        <div class="footer-box">
+          <h2>Meta Widget</h2>
+          <ul>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Entries RSS</a></li>
+            <li><a href="#">Comments RSS</a></li>
+            <li><a href="#">WordPress.org</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div id="copyright">&copy; Copyright 2010 Busy Hands.</div>
+
+      <div id="company-thanks">Theme brought to you by <a href="#">Good Friends!</a></div>
+    </footer>
+
   </body>
 </html>
