--- a/ga_practice/wk01/busy-hands/index.html
+++ b/ga_practice/wk01/busy-hands/index.html
@@ -1,58 +1,87 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Busy Hands</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8" />
+  <title>Busy Hands</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
-    <header>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </nav>
-    </header>
+<div id="wrapper">
+  <header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+  </header>
+
+  <div class="content">
+
+  <h1>Busy Hands</h1>
+  <div id="social-media">
+    <ul>
+      <li class="linkedin"><a href="#">Linked In</a></li>
+      <li class="twitter"><a href="#">Twitter</a></li>
+      <li class="facebook"><a href="#">Facebook</a></li>
+      <li class="rss"><a href="#">RSS</a></li>
+    </ul>
+  </div><!--social media-->
+
+  <div id="photobanner">
+    <img src="images/photobanner.png">
+  </div><!--photobanner-->
+  <div class="bannershadow"></div>
+
+  <div id="blurb">
+    <p>
+    <a href="#"><img src="images/button_blurb.png"></a>
+      Ut enim ad minim veniam quis nostrud exercitation ullamco sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+  </div>
 
 
-    <footer>
-      <div id="footer-widgets">
-        <div class="footer-box">
-          <h2>Blogroll</h2>
-          <ul>
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Plugins</a></li>
-            <li><a href="#">Suggest Ideas</a></li>
-            <li><a href="#">Themes</a></li>
-            <li><a href="#">WordPress Blog</a></li>
-          </ul>
-        </div>
 
-        <div class="footer-box middle-widget">
-          <h2>Text Widget</h2>
-          <p>Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
+  </div><!--content-->
 
-        <div class="footer-box">
-          <h2>Meta Widget</h2>
-          <ul>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Entries RSS</a></li>
-            <li><a href="#">Comments RSS</a></li>
-            <li><a href="#">WordPress.org</a></li>
-          </ul>
-        </div>
+
+  <footer>
+    <div id="footer-widgets">
+      <div class="footer-box">
+        <h2>Blogroll</h2>
+        <ul>
+          <li><a href="#">Documentation</a></li>
+          <li><a href="#">Plugins</a></li>
+          <li><a href="#">Suggest Ideas</a></li>
+          <li><a href="#">Themes</a></li>
+          <li><a href="#">WordPress Blog</a></li>
+        </ul>
       </div>
 
-      <div id="copyright">&copy; Copyright 2010 Busy Hands.</div>
+      <div class="footer-box middle-widget">
+        <h2>Text Widget</h2>
+        <p>Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
 
-      <div id="company-thanks">Theme brought to you by <a href="#">Good Friends!</a></div>
-    </footer>
+      <div class="footer-box">
+        <h2>Meta Widget</h2>
+        <ul>
+          <li><a href="#">Log In</a></li>
+          <li><a href="#">Entries RSS</a></li>
+          <li><a href="#">Comments RSS</a></li>
+          <li><a href="#">WordPress.org</a></li>
+        </ul>
+      </div>
+    </div>
 
-  </body>
+    <div id="copyright">&copy; Copyright 2010 Busy Hands.</div>
+
+    <div id="company-thanks">Theme brought to you by <a href="#">Good Friends!</a></div>
+  </footer>
+</div><!--wrapper-->
+</body>
 </html>
