adding in background images

--- a/ga_practice/wk01/busy-hands/index.html
+++ b/ga_practice/wk01/busy-hands/index.html
@@ -42,8 +42,30 @@
     <a href="#"><img src="images/button_blurb.png"></a>
       Ut enim ad minim veniam quis nostrud exercitation ullamco sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </p>
-  </div>
+  </div><!--blur-->
 
+  <div id="home-boxes">
+    <div class="home-box">
+      <h2>Home Box 1</h2>
+      <p><img src="images/photo_column1.jpg"></p>
+      <p>Lorem ipsum dolor sit etconsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a href="#">Read more &raquo;</a>
+    </div>
+
+    <div class="home-box">
+      <h2>Home Box 2</h2>
+      <p><img src="images/photo_column2.jpg"></p>
+      <p>Lorem ipsum dolor sit etconsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a href="#">Read more &raquo;</a>
+    </div>
+
+    <div class="home-box">
+      <h2>Home Box 3</h2>
+      <p><img src="images/photo_column3.jpg"></p>
+      <p>Lorem ipsum dolor sit etconsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a href="#">Read more &raquo;</a>
+    </div>
+  </div><!--home-boxes-->
 
 
   </div><!--content-->
