added text replacement

--- a/ga_practice/wk01/busy-hands/index.html
+++ b/ga_practice/wk01/busy-hands/index.html
@@ -22,7 +22,7 @@
 
   <div class="content">
 
-  <h1>Busy Hands</h1>
+  <h1 class="hide-text">Busy Hands</h1>
   <div id="social-media">
     <ul>
       <li class="linkedin"><a href="#">Linked In</a></li>
