--- a/javascript30/01 - JavaScript Drum Kit/index.html
+++ b/javascript30/01 - JavaScript Drum Kit/index.html
@@ -7,53 +7,53 @@
 </head>
 <body>
 
-
-  <div class="keys">
-    <div data-key="65" class="key">
-      <kbd>A</kbd>
-      <span class="sound">clap</span>
-    </div>
-
-    <div data-key="83" class="key">
-      <kbd>S</kbd>
-      <span class="sound">hihat</span>
-    </div>
-
-    <div data-key="68" class="key">
-      <kbd>D</kbd>
-      <span class="sound">kick</span>
-    </div>
-
-    <div data-key="70" class="key">
-      <kbd>F</kbd>
-      <span class="sound">openhat</span>
-    </div>
-
-    <div data-key="71" class="key">
-      <kbd>G</kbd>
-      <span class="sound">boom</span>
-    </div>
-
-    <div data-key="72" class="key">
-      <kbd>H</kbd>
-      <span class="sound">ride</span>
-    </div>
-
-    <div data-key="74" class="key">
-      <kbd>J</kbd>
-      <span class="sound">snare</span>
-    </div>
-
-    <div data-key="75" class="key">
-      <kbd>K</kbd>
-      <span class="sound">tom</span>
-    </div>
-
-    <div data-key="76" class="key">
-      <kbd>L</kbd>
-      <span class="sound">tink</span>
-    </div>
+<!-- keycode.info website for keycodes-->
+<div class="keys">
+  <div data-key="65" class="key">
+    <kbd>A</kbd>
+    <span class="sound">clap</span>
   </div>
+
+  <div data-key="83" class="key">
+    <kbd>S</kbd>
+    <span class="sound">hihat</span>
+  </div>
+
+  <div data-key="68" class="key">
+    <kbd>D</kbd>
+    <span class="sound">kick</span>
+  </div>
+
+  <div data-key="70" class="key">
+    <kbd>F</kbd>
+    <span class="sound">openhat</span>
+  </div>
+
+  <div data-key="71" class="key">
+    <kbd>G</kbd>
+    <span class="sound">boom</span>
+  </div>
+
+  <div data-key="72" class="key">
+    <kbd>H</kbd>
+    <span class="sound">ride</span>
+  </div>
+
+  <div data-key="74" class="key">
+    <kbd>J</kbd>
+    <span class="sound">snare</span>
+  </div>
+
+  <div data-key="75" class="key">
+    <kbd>K</kbd>
+    <span class="sound">tom</span>
+  </div>
+
+  <div data-key="76" class="key">
+    <kbd>L</kbd>
+    <span class="sound">tink</span>
+  </div>
+</div>
 
 
 <audio data-key="65" src="sounds/clap.wav"></audio>
@@ -65,6 +65,20 @@
 <audio data-key="74" src="sounds/snare.wav"></audio>
 <audio data-key="75" src="sounds/tom.wav"></audio>
 <audio data-key="76" src="sounds/tink.wav"></audio>
+
+
+<script>
+  window.addEventListener('keydown', function(e){
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"`);
+    //console.log(audio);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"`);
+    if(!audio) return; //stops function from running all together for keys that have no sound
+    audio.currentTime = 0;  //rewinds to the start
+    audio.play();
+
+    console.log(key);
+  });
+</script>
 
 
 </body>
