--- a/javascript30/01 - JavaScript Drum Kit/index.html
+++ b/javascript30/01 - JavaScript Drum Kit/index.html
@@ -68,16 +68,31 @@
 
 
 <script>
-  window.addEventListener('keydown', function(e){
+
+  function playSound(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"`);
     //console.log(audio);
     const key = document.querySelector(`.key[data-key="${e.keyCode}"`);
     if(!audio) return; //stops function from running all together for keys that have no sound
     audio.currentTime = 0;  //rewinds to the start
     audio.play();
+    //console.log(key);
+    key.classList.add('playing');
+  }
 
-    console.log(key);
-  });
+  function removeTransition(e) {
+    // console.log(e);
+    if(e.propertyName !== 'transform') return; //skip it if it's not a transform
+    // console.log(e.propertyName);
+    // console.log(this);
+    this.classList.remove('playing');
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
+
+
 </script>
 
 
