can paint, but mouse click not right yet

--- a/javascript30/08 - Fun with HTML5 Canvas/index.html
+++ b/javascript30/08 - Fun with HTML5 Canvas/index.html
@@ -54,7 +54,7 @@
 
   }
 
-  canvas.addEventListener('mouseown', (e) => {
+  canvas.addEventListener('mousedown', (e) => {
     isDrawing = true;
     [lastX, lastY] = [e.offsetX, e.offsetY];
   });
