--- a/javascript30/11 - Custom Video Player/index-STARTER.html
+++ b/javascript30/11 - Custom Video Player/index-STARTER.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Video Player</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-STARTER.css">
 </head>
 <body>
 
@@ -22,6 +22,6 @@
      </div>
    </div>
 
-  <script src="scripts.js"></script>
+  <script src="scripts-FINISHED.js"></script>
 </body>
 </html>
